src/test/contracts/negative/polymorphism/annotate_arrow.mligo
let f (_:unit) (_:nat option) = None
